deployment/firewall/iptables.rules
# Generated by iptables-save v1.8.7 on Tue Jun 30 06:35:42 2026
*filter
:INPUT ACCEPT [4220449842:14088413269672]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [3793544958:20472831579396]
-A INPUT -s 192.168.1.0/24 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 10.53.0.0/16 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 10.79.212.38/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 10.53.179.2/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 45.137.126.0/24 -j DROP
-A INPUT -p udp -m udp --dport 5060 -j DROP
-A INPUT -s 213.202.230.0/24 -j DROP
-A INPUT -s 180.178.51.210/32 -j DROP
-A INPUT -s 199.127.61.12/32 -j DROP
-A INPUT -s 51.75.106.116/32 -j DROP
-A INPUT -s 45.137.126.71/32 -j DROP
-A INPUT -s 199.127.62.109/32 -j DROP
-A INPUT -s 108.181.56.189/32 -j DROP
-A INPUT -s 104.238.220.228/32 -j DROP
-A INPUT -s 192.248.238.122/32 -j DROP
-A INPUT -s 96.85.181.245/32 -j DROP
-A INPUT -s 4.1.189.10/32 -j DROP
-A INPUT -s 4.35.180.158/32 -j DROP
-A INPUT -s 45.61.188.148/32 -j DROP
-A INPUT -s 66.178.131.21/32 -j DROP
-A INPUT -s 50.249.245.37/32 -j DROP
-A INPUT -s 204.197.154.202/32 -j DROP
-A INPUT -s 173.251.102.98/32 -j DROP
-A INPUT -s 204.116.190.70/32 -j DROP
-A INPUT -s 193.181.46.10/32 -j DROP
-A INPUT -s 108.181.63.2/32 -j DROP
-A INPUT -s 204.111.80.18/32 -j DROP
-A INPUT -s 208.52.84.52/32 -j DROP
-A INPUT -s 5.39.101.60/32 -j DROP
-A INPUT -s 51.38.52.76/32 -j DROP
-A INPUT -s 37.59.205.230/32 -j DROP
-A INPUT -s 96.47.177.163/32 -j DROP
-A INPUT -s 148.245.106.50/32 -j DROP
-A INPUT -s 71.246.110.172/32 -j DROP
-A INPUT -s 51.178.100.208/32 -j DROP
-A INPUT -s 91.121.63.97/32 -j DROP
-A INPUT -s 216.244.83.2/32 -j DROP
-A INPUT -s 5.135.106.93/32 -j DROP
-A INPUT -s 138.199.2.51/32 -j DROP
-A INPUT -s 50.221.62.114/32 -j DROP
-A INPUT -s 160.119.76.81/32 -j DROP
-A INPUT -s 160.119.76.15/32 -j DROP
-A INPUT -s 213.202.230.104/32 -j DROP
-A INPUT -s 5.135.94.29/32 -j DROP
-A INPUT -s 212.83.184.42/32 -j DROP
-A INPUT -s 193.181.46.131/32 -j DROP
-A INPUT -s 51.89.38.59/32 -j DROP
-A INPUT -s 51.38.236.24/32 -j DROP
-A INPUT -s 193.104.222.35/32 -j DROP
-A INPUT -s 172.110.223.167/32 -j DROP
-A INPUT -s 87.246.54.224/32 -j DROP
COMMIT
# Completed on Tue Jun 30 06:35:42 2026
